--- a/diapos/MaquinasAparamenta.tex
+++ b/diapos/MaquinasAparamenta.tex
@@ -1,4 +1,4 @@
-% Created 2018-10-25 jue 22:54
+% Created 2018-10-26 vie 00:10
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -52,9 +52,9 @@
 \maketitle
 
 \section{Fundamentos de Electromagnetismo}
-\label{sec:orgc7edcb4}
+\label{sec:orge24c6d5}
 
-\begin{frame}[label={sec:orgfc79ac5}]{Fuerza Magnética}
+\begin{frame}[label={sec:org127a0f0}]{Fuerza Magnética}
 Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente eléctrica en un conductor) \footnote{Fuerza de Lorentz}.
 \[
 \vec{F} = q (\vec{v} \times \vec{B})
@@ -75,7 +75,7 @@ Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgace27b7}]{Campo Magnético creado por un Conductor}
+\begin{frame}[label={sec:org91a048f}]{Campo Magnético creado por un Conductor}
 Una corriente eléctrica crea un campo magnético en torno al conductor\footnote{Ley de Biot-Savart (y Oersted). Ley de Ampere.}. 
 
 \begin{columns}
@@ -92,7 +92,7 @@ Una corriente eléctrica crea un campo magnético en torno al conductor\footnote
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgfaa8aae}]{Interacción entre Conductores}
+\begin{frame}[label={sec:orge8dab45}]{Interacción entre Conductores}
 Dos conductores se repelen o atraen según el sentido de sus corrientes.
 
 \begin{center}
@@ -102,7 +102,7 @@ Dos conductores se repelen o atraen según el sentido de sus corrientes.
 Vídeo: \href{https://www.youtube.com/watch?v=2j8D\_N1v0tU\&t=0m15s}{Repulsión entre barras de Alta Tensión}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgf3b7f96}]{Flujo Magnético}
+\begin{frame}[label={sec:orgcd5ab30}]{Flujo Magnético}
 El flujo magnético es la cantidad de líneas de fuerza magnética que atraviesan una superficie. 
 
 Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la posición relativa entre ambos, \(\theta\).
@@ -116,7 +116,7 @@ Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la p
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org99b40af}]{Ley de Faraday}
+\begin{frame}[label={sec:org8732474}]{Ley de Faraday}
 \begin{itemize}
 \item Cuando el \alert{flujo magnético} que atraviesa una espira es \alert{variable}
 aparece \alert{tensión inducida}.
@@ -144,11 +144,11 @@ variación.
 
 
 \section{Máquinas Eléctricas}
-\label{sec:orgc6a7b3b}
+\label{sec:org42cecca}
 \subsection{Introducción}
-\label{sec:org4c89b86}
+\label{sec:org399a8eb}
 
-\begin{frame}[label={sec:orge0ebb44}]{Máquina Eléctrica}
+\begin{frame}[label={sec:org4e47adc}]{Máquina Eléctrica}
 Una máquina eléctrica realiza una conversión entre dos formas de energía, una de ellas eléctrica:
 
 \begin{itemize}
@@ -158,7 +158,7 @@ Una máquina eléctrica realiza una conversión entre dos formas de energía, un
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3570c45}]{Partes de una Máquina}
+\begin{frame}[label={sec:orgf93eb53}]{Partes de una Máquina}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -179,7 +179,7 @@ La transformación de energía eléctrica y mecánica se produce a través del c
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org07f1155}]{Inductor e Inducido}
+\begin{frame}[label={sec:org9931e6d}]{Inductor e Inducido}
 Al elemento que emite el campo magnético se le denomina \alert{inductor} y aquel que es atravesado por este flujo es el \alert{inducido}.
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/Electric_motor_cycle_3.pdf}
@@ -187,8 +187,8 @@ Al elemento que emite el campo magnético se le denomina \alert{inductor} y aque
 \end{frame}
 
 \subsection{Motor}
-\label{sec:orgec713bc}
-\begin{frame}[label={sec:orgce0f466}]{Fundamento}
+\label{sec:orgcf07c78}
+\begin{frame}[label={sec:org5bf2508}]{Fundamento}
 \begin{itemize}
 \item La energía eléctrica de \alert{entrada} produce una \alert{corriente eléctrica} que genera un \alert{campo magnético variable}.
 \item Este campo puede \alert{interactuar} con otro \alert{campo magnético existente} o con \alert{otro conductor}, y produce movimiento.
@@ -201,7 +201,7 @@ Al elemento que emite el campo magnético se le denomina \alert{inductor} y aque
 \end{frame}
 
 
-\begin{frame}[label={sec:org354c692}]{Motor asíncrono o de inducción}
+\begin{frame}[label={sec:orgdb691ba}]{Motor asíncrono o de inducción}
 \begin{itemize}
 \item \alert{Estator-Inductor} alimentado por una \alert{corriente trifásica alterna} (\emph{campo giratorio})
 
@@ -217,7 +217,7 @@ Al elemento que emite el campo magnético se le denomina \alert{inductor} y aque
 Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGlAu0uCHY\&feature=related}{(1)} \href{http://www.youtube.com/watch?v=P-eTLmJC2cQ}{(2)}
 \end{frame}
 
-\begin{frame}[label={sec:org6e50b79}]{Motor DC}
+\begin{frame}[label={sec:orgcb46dce}]{Motor DC}
 \begin{itemize}
 \item \alert{Estator-Inductor} genera \alert{campo constante} (imanes permanentes o alimentado por corriente DC).
 
@@ -231,9 +231,9 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 
 
 \subsection{Generador}
-\label{sec:orgc8917e4}
+\label{sec:orge3efac1}
 
-\begin{frame}[label={sec:orgc6eb018}]{Fundamento}
+\begin{frame}[label={sec:org4c0d458}]{Fundamento}
 \begin{itemize}
 \item Existe un \alert{campo magnético en el interior de la máquina} (p. ej. imanes permanentes)
 \item La \alert{energía mecánica de entrada} aporta \alert{movimiento a una bobina} en el seno del campo.
@@ -248,7 +248,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{frame}
 
 
-\begin{frame}[label={sec:org162fe23}]{Generador Síncrono o Alternador}
+\begin{frame}[label={sec:orgb405b27}]{Generador Síncrono o Alternador}
 \begin{itemize}
 \item \alert{Rotor-inductor} alimentado por \alert{corriente continua} mediante anillos.
 
@@ -260,7 +260,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0697f77}]{Generador Asíncrono}
+\begin{frame}[label={sec:org1566632}]{Generador Asíncrono}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -282,7 +282,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgb9e1f8d}]{Generador DC}
+\begin{frame}[label={sec:orgff89faa}]{Generador DC}
 \begin{itemize}
 \item \alert{Estator-Inductor} genera campo constante (alimentado por corriente DC o imanes permanentes).
 
@@ -296,8 +296,8 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 
 
 \subsection{Transformador}
-\label{sec:org4dfea97}
-\begin{frame}[label={sec:org14abb61}]{Fundamento}
+\label{sec:org52536ef}
+\begin{frame}[label={sec:org6ba17bb}]{Fundamento}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -318,7 +318,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org44ce254}]{Relación de Transformación}
+\begin{frame}[label={sec:org10c790b}]{Relación de Transformación}
 \begin{align*}
 N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 \frac{V_{p}}{N_{p}} &= \frac{V_{s}}{N_{s}}
@@ -335,18 +335,18 @@ N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 
 
 \section{Aparamenta eléctrica}
-\label{sec:org6037cdf}
+\label{sec:org45f386a}
 
 \subsection{Sistema de Suministro Eléctrico}
-\label{sec:org3dc0368}
-\begin{frame}[label={sec:org28bf3e9}]{Sistema de suministro eléctrico}
+\label{sec:orgc090299}
+\begin{frame}[label={sec:orgd86ce4f}]{Sistema de suministro eléctrico}
 Un \alert{sistema de suministro eléctrico} tiene como objetivo \alert{producir,
 transportar y distribuir energía eléctrica} a los lugares de consumo,
 con el mínimo coste posible en condiciones de \alert{fiabilidad, calidad y
 seguridad}.
 \end{frame}
 
-\begin{frame}[label={sec:orge3a05c3}]{Componentes del Sistema de Suministro Eléctrico}
+\begin{frame}[label={sec:org37a337f}]{Componentes del Sistema de Suministro Eléctrico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Redelectrica2.png}
 \end{center}
@@ -367,164 +367,190 @@ algunos casos, almacenamiento)
 
 
 \subsection{Definición y Funciones}
-\label{sec:org723c2aa}
-\begin{frame}[label={sec:org60c2e5c}]{Definición}
-\begin{block}{ITC-BT-01}
-\begin{description}
-\item[{Aparamenta:}] Equipo, aparato o material previsto para ser conectado a un circuito eléctrico con el fin de asegurar una o varias de las siguientes funciones: \alert{protección}, \alert{control}, \alert{seccionamiento}, \alert{conexión}.
+\label{sec:org7a07bbf}
+\begin{frame}[label={sec:orga96a8ce}]{Aparamenta}
+\begin{block}{Definición}
+Equipo, aparato o material previsto para ser conectado a un circuito eléctrico con el fin de asegurar una o varias de las siguientes funciones: 
 
-\item[{Función de la Aparamenta:}] Garantizar la seguridad de las personas,
-la continuidad en el suministro y la protección de los elemento de la
-instalación.
-\end{description}
+\begin{itemize}
+\item \alert{Protección}
+\item \alert{Aislamiento}
+\item \alert{Control} y \alert{Conexión}.
+\end{itemize}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgf29c24c}]{Funciones de la aparamenta}
-\begin{itemize}
-\item \alert{Protección}:
 
+\begin{frame}[label={sec:orgbab5f79}]{Protección}
 \begin{itemize}
-\item Protección de los elementos de los circuitos contra las tensiones
-térmicas y mecánicas de las corrientes de cortocircuito.
+\item Protección de los \alert{elementos de los circuitos} (cables,
+aparamenta) contra las tensiones térmicas y mecánicas de las
+corrientes de cortocircuito.
 
-\item Protección de las personas en caso de producirse un defecto de
+\item Protección de las \alert{personas} en caso de producirse un defecto de
 aislamiento.
 
-\item Protección de los dispositivos y aparatos suministrados.
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:orgf21bbf8}]{Funciones de la aparamenta}
-\begin{itemize}
-\item \alert{Aislamiento}: separar de forma verificable un circuito, un aparato o
-un elemento de la planta del resto de un sistema que se encuentra en
-tensión, con el fin de que el personal pueda realizar con total
-seguridad trabajos en la parte aislada.
+\item Protección de los \alert{dispositivos y aparatos suministrados} (ej. motores).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgab6bbd4}]{Funciones de la aparamenta}
-\begin{itemize}
-\item \alert{Control:} modificar un sistema cargado en cualquier momento
+\begin{frame}[label={sec:org8e70003}]{Aislamiento}
+Separar de forma verificable un circuito, un aparato o un elemento de
+la planta del resto de un sistema que se encuentra en tensión, con el
+fin de que el personal pueda realizar con total seguridad trabajos en
+la parte aislada.
+\end{frame}
+
+\begin{frame}[label={sec:orgf5a863d}]{Control}
+Modificar un sistema cargado para:
 
 \begin{itemize}
-\item Control funcional (conmutación rutinaria, etc.).
+\item Control funcional (condiciones normales de servicio, conmutación rutinaria).
 
-\item Conmutación de emergencia.
+\item Conmutación de emergencia (ej. seta de parada)
 
 \item Operaciones de mantenimiento del sistema de alimentación.
 \end{itemize}
-\end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4dbcb88}]{Arco Eléctrico}
+\begin{frame}[label={sec:org3ab2e3d}]{Arco Eléctrico}
 \begin{itemize}
-\item Descarga eléctrica que se forma entre dos electrodos sometidos a una diferencia de potencial.
-\item Durante el tiempo de la descarga se produce una luminosidad muy intensa y un gran desprendimiento de calor.
-\item Ambos fenómenos, en caso de ser accidentales, pueden ser sumamente destructivos.
+\item Descarga eléctrica que se forma entre dos electrodos sometidos a una
+diferencia de potencial.
+\end{itemize}
+\begin{center}
+\includegraphics[height=0.35\textheight]{../figs/arco_electrico.jpg}
+\end{center}
+
+\begin{itemize}
+\item Luminosidad muy intensa y un gran desprendimiento de calor (fenómeno destructivo)
 \end{itemize}
 
+\begin{block}{}
 \begin{center}
 Vídeo: \href{http://www.youtube.com/watch?v=WBTvGqRA4\_0}{Apertura en Alta Tensión}
 \end{center}
+\end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgba91c4e}]{Poder de corte y cierre}
+\begin{frame}[label={sec:org20b0ba5}]{Poder de corte y cierre}
 \begin{description}
-\item[{Poder de corte:}] intensidad de corriente que este dispositivo es
-capaz de cortar, bajo una tensión de restablecimiento determinada.
+\item[{Poder de corte:}] intensidad de corriente que un dispositivo es
+capaz de cortar bajo una tensión de restablecimiento determinada.
 
-\item[{Poder de cierre:}] intensidad de corriente que este aparato es capaz
-de establecer, bajo una tensión dada.
+\item[{Poder de cierre:}] intensidad de corriente que un aparato es capaz
+de establecer bajo una tensión dada.
 \end{description}
 \end{frame}
 
 \subsection{Tipos de Dispositivos}
-\label{sec:org0c8f1ab}
-\begin{frame}[label={sec:orgbac29f9}]{Dispositivos simples}
-\begin{block}{Seccionador}
+\label{sec:org73edabf}
+
+\begin{frame}[label={sec:org7ca43ed}]{Seccionador}
 \begin{itemize}
 \item Dispositivo de dos posiciones (abierto/cerrado) enclavable y accionado manualmente que proporciona un aislamiento seguro de un circuito cuando está enclavado en la posición abierta.
 
 \item Un seccionador no está diseñado para abrir o cerrar el paso de la corriente.
 \end{itemize}
-\end{block}
 
-\begin{block}{Interruptor de carga}
-\begin{itemize}
-\item Dispositivo no automático (accionamiento manual) de dos posiciones (abierto/cerrado).
-\item Se utiliza para cerrar y abrir circuitos cargados en condiciones normales de circuitos sin defectos.
-\end{itemize}
-\end{block}
+\begin{center}
+\includegraphics[height=0.6\textheight]{../figs/seccionador.jpeg}
+\end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1ce5cc3}]{Dispositivos simples}
-\begin{block}{Contactor}
+\begin{frame}[label={sec:org9eaf70d}]{Interruptor de carga}
 \begin{itemize}
-\item Dispositivo accionado por solenoide que por lo general se mantiene cerrado mediante una corriente (reducida).
+\item Dispositivo no automático (\alert{accionamiento manual}) de dos posiciones (abierto/cerrado).
+
+\item Se utiliza para cerrar y abrir circuitos cargados en condiciones normales de circuitos sin defectos (no ofrece protección)
+\end{itemize}
+\begin{center}
+\includegraphics[height=0.6\textheight]{../figs/interruptor_manual.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}[label={sec:org3474b73}]{Contactor}
+\begin{itemize}
+\item Dispositivo de conmutación accionado por solenoide que por lo general se mantiene cerrado mediante una corriente (reducida).
 
 \item Se suelen controlar de forma remota por medio de pulsadores de activación/desactivación.
 \end{itemize}
-\end{block}
 
-\begin{block}{Fusible}
+\begin{center}
+\includegraphics[height=0.6\textheight]{../figs/Contactor.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}[label={sec:org382aa3d}]{Fusible}
+\begin{columns}
+\begin{column}{0.7\columnwidth}
 \begin{itemize}
-\item Un filamento o lámina de un metal o aleación de bajo punto de fusión que se intercala en un punto determinado de una instalación eléctrica
-
-\item Se funde por Efecto Joule cuando la intensidad de corriente supere, por un cortocircuito o un exceso de carga.
+\item Se funde por Efecto Joule cuando la intensidad de corriente supera un umbral, por un cortocircuito o un exceso de carga.
 
 \item Es capaz de abrir un circuito en carga.
 \end{itemize}
+\end{column}
+\begin{column}{0.3\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/fusible.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgce675c7}]{Interruptor magnetotérmico}
+\begin{columns}
+\begin{column}{0.6\columnwidth}
+\begin{itemize}
+\item Dispositivo \alert{automático} capaz de interrumpir la corriente eléctrica de un circuito cuando ésta sobrepasa ciertos valores máximos.
+
+\item Se emplea para \alert{proteger contra sobreintensidades} (\emph{efecto magnético}) y \alert{sobrecargas} (\emph{efecto Joule}).
+\end{itemize}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/interruptor-magnetotermico.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\begin{block}{}
+Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org3bc1b28}]{Interruptor magnetotérmico}
+\begin{frame}[label={sec:orge95b907}]{Interruptor diferencial}
 \begin{itemize}
-\item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando ésta sobrepasa ciertos valores máximos.
-
-\item El dispositivo consta de dos partes, un electroimán y una lámina bimetálica, conectadas en serie y por las que circula la corriente que va hacia la carga.
-
-\item Su funcionamiento se basa en dos de los efectos producidos por la circulación de corriente eléctrica en un circuito: el magnético y el térmico (efecto Joule).
-
-\item Se emplea para \alert{proteger contra sobreintensidades y sobrecargas}.
-\end{itemize}
-
-\begin{center}
-Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
-\end{center}
-\end{frame}
-
-\begin{frame}[label={sec:org85cd048}]{Interruptor Magnetotérmico}
-\begin{center}
-\includegraphics[height=0.8\textheight]{../figs/SeccionMagnetotermico.png}
-\end{center}
-\end{frame}
-
-\begin{frame}[label={sec:org6c3b664}]{Interruptor diferencial}
-\begin{itemize}
-\item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando existe una corriente diferencial residual, indicativa de un defecto de aislamiento.
-\item Para la detección emplea un transformador toroidal que abraza a todos los conductores.
-\item Cuando existe un defecto, la suma fasorial de las corrientes abarcadas no será nula y, por tanto, aparecerá una intensidad en el secundario del transformador, proporcional al defecto.
+\item Dispositivo \alert{automático} con poder de corte ante una corriente diferencial residual (defecto de aislamiento).
 \item Se emplea para la \alert{protección de las personas}.
+\item Para la detección emplea un transformador toroidal que abraza a todos los conductores.
 \end{itemize}
+
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/InterruptorDiferencial.JPG}
+\end{center}
+\end{column}
+
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/interruptor-diferencial.jpg}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6a2f40b}]{Interruptor Diferencial}
-\begin{center}
-\includegraphics[height=0.3\textheight]{../figs/InterruptorDiferencial.pdf}
-\end{center}
-
-\begin{center}
-\includegraphics[height=0.3\textheight]{../figs/ResidualCurrentCircuitBreak.jpg}
-\end{center}
-\end{frame}
 
 \section{Recursos}
-\label{sec:org7ecb1df}
+\label{sec:org446d83e}
 
-\begin{frame}[label={sec:org51a0a5a}]{Bibliografía}
+\begin{frame}[label={sec:org0597859}]{Bibliografía}
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Máquinas Eléctricas}. Ed. Mc. Graw Hill.
 
